[package]
name = "axum_typetag"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4.8", features = ["std"] }
fern = "0.6"
typetag = "0.2.16"
